--- a/MapTool.cbp
+++ b/MapTool.cbp
@@ -140,6 +140,7 @@
 			<Add option="-DwxUSE_UNICODE" />
 			<Add directory="$(#wx.include)" />
 			<Add directory="$(#wx)/contrib/include" />
+			<Add directory="wxFormBuilder" />
 		</Compiler>
 		<ResourceCompiler>
 			<Add directory="$(#wx.include)" />
@@ -164,12 +165,18 @@
 		<Unit filename="App.h" />
 		<Unit filename="Map.cpp" />
 		<Unit filename="Map.h" />
+		<Unit filename="MapTool.cpp" />
+		<Unit filename="MapTool.h" />
 		<Unit filename="MpcDecode.cpp" />
 		<Unit filename="MpcDecode.hpp" />
 		<Unit filename="mydefs.hpp" />
 		<Unit filename="resource.rc">
 			<Option compilerVar="WINDRES" />
 		</Unit>
+		<Unit filename="wxFormBuilder/MapFrameBase.cpp">
+			<Option compiler="gcc" use="0" buildCommand="-finput-charset=utf-8" />
+		</Unit>
+		<Unit filename="wxFormBuilder/MapFrameBase.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
