--- a/MapTool.cbp
+++ b/MapTool.cbp
@@ -165,12 +165,16 @@
 		</Linker>
 		<Unit filename="App.cpp" />
 		<Unit filename="App.h" />
+		<Unit filename="AsfDecode.cpp" />
+		<Unit filename="AsfDecode.hpp" />
 		<Unit filename="Map.cpp" />
 		<Unit filename="Map.h" />
 		<Unit filename="MapTool.cpp" />
 		<Unit filename="MapTool.h" />
 		<Unit filename="MpcDecode.cpp" />
 		<Unit filename="MpcDecode.hpp" />
+		<Unit filename="Npc.cpp" />
+		<Unit filename="Npc.hpp" />
 		<Unit filename="mydefs.hpp" />
 		<Unit filename="resource.rc">
 			<Option compilerVar="WINDRES" />
