--- a/MapTool.cbp
+++ b/MapTool.cbp
@@ -139,6 +139,9 @@
 					<Add library="$(#wx.lib)\gcc_lib\libwxscintilla.a" />
 					<Add directory="$(#wx.lib)/gcc_lib" />
 				</Linker>
+				<ExtraCommands>
+					<Add after="D:\Protools\ExeTool\UPX\upx.exe -9 $(PROJECT_DIR)$(TARGET_OUTPUT_FILE)" />
+				</ExtraCommands>
 			</Target>
 			<Target title="Release-static-x64">
 				<Option output="bin/Release-static/MapTool_x64" prefix_auto="1" extension_auto="1" />
@@ -182,6 +185,9 @@
 					<Add library="$(#wx.lib)\gcc_lib\libwxscintilla.a" />
 					<Add directory="$(#wx.lib)/gcc_lib" />
 				</Linker>
+				<ExtraCommands>
+					<Add after="D:\Protools\ExeTool\UPX\upx.exe -9 $(PROJECT_DIR)$(TARGET_OUTPUT_FILE)" />
+				</ExtraCommands>
 			</Target>
 		</Build>
 		<Compiler>
