--- a/MapTool.cbp
+++ b/MapTool.cbp
@@ -191,28 +191,28 @@
 					<Add option="-s" />
 					<Add option="-static-libgcc" />
 					<Add option="-static-libstdc++" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_stc.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_richtext.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_xrc.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_adv.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_html.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxbase30u_xml.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_core.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxbase30u.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxpng.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxjpeg.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxtiff.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxzlib.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxexpat.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_aui.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxbase30u_net.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_gl.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_media.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_propgrid.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_ribbon.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_webview.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxregexu.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxscintilla.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_stc.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_richtext.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_xrc.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_adv.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_html.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxbase30u_xml.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_core.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxbase30u.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxpng.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxjpeg.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxtiff.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxzlib.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxexpat.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_aui.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxbase30u_net.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_gl.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_media.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_propgrid.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_ribbon.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_webview.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxregexu.a" />
+					<Add library="$(#wx.lib)\gcc_lib_x64\libwxscintilla.a" />
 					<Add directory="$(#wx.lib)/gcc_lib" />
 				</Linker>
 				<ExtraCommands>
