--- a/MapTool.cbp
+++ b/MapTool.cbp
@@ -21,28 +21,28 @@
 					<Add directory="$(#wx.lib)/gcc_dll/mswud" />
 				</ResourceCompiler>
 				<Linker>
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30ud_stc.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30ud_richtext.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30ud_xrc.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30ud_adv.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30ud_html.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxbase30ud_xml.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30ud_core.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxbase30ud.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxpngd.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxjpegd.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxtiffd.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxzlibd.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxexpatd.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30ud_aui.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxbase30u_net.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30ud_gl.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30ud_media.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30ud_propgrid.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30ud_ribbon.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30ud_webview.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxregexud.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxscintillad.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30ud_stc.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30ud_richtext.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30ud_xrc.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30ud_adv.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30ud_html.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxbase30ud_xml.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30ud_core.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxbase30ud.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxpngd.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxjpegd.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxtiffd.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxzlibd.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxexpatd.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30ud_aui.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxbase30u_net.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30ud_gl.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30ud_media.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30ud_propgrid.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30ud_ribbon.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30ud_webview.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxregexud.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxscintillad.a" />
 					<Add directory="$(#wx.lib)/gcc_dll" />
 				</Linker>
 			</Target>
@@ -61,28 +61,28 @@
 					<Add directory="$(#wx.lib)/gcc_lib/mswud" />
 				</ResourceCompiler>
 				<Linker>
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30ud_stc.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30ud_richtext.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30ud_xrc.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30ud_adv.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30ud_html.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxbase30ud_xml.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30ud_core.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxbase30ud.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxpngd.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxjpegd.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxtiffd.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxzlibd.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxexpatd.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30ud_aui.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxbase30u_net.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30ud_gl.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30ud_media.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30ud_propgrid.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30ud_ribbon.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30ud_webview.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxregexud.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxscintillad.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30ud_stc.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30ud_richtext.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30ud_xrc.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30ud_adv.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30ud_html.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxbase30ud_xml.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30ud_core.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxbase30ud.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxpngd.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxjpegd.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxtiffd.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxzlibd.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxexpatd.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30ud_aui.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxbase30u_net.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30ud_gl.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30ud_media.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30ud_propgrid.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30ud_ribbon.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30ud_webview.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxregexud.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxscintillad.a" />
 					<Add directory="$(#wx.lib)/gcc_lib" />
 				</Linker>
 			</Target>
@@ -102,28 +102,28 @@
 				</ResourceCompiler>
 				<Linker>
 					<Add option="-s" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30u_stc.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30u_richtext.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30u_xrc.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30u_adv.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30u_html.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxbase30u_xml.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30u_core.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxbase30u.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxpng.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxjpeg.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxtiff.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxzlib.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxexpat.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30u_aui.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxbase30u_net.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30u_gl.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30u_media.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30u_propgrid.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30u_ribbon.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxmsw30u_webview.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxregexu.a" />
-					<Add library="$(#wx.lib)\gcc_dll\libwxscintilla.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30u_stc.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30u_richtext.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30u_xrc.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30u_adv.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30u_html.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxbase30u_xml.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30u_core.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxbase30u.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxpng.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxjpeg.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxtiff.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxzlib.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxexpat.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30u_aui.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxbase30u_net.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30u_gl.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30u_media.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30u_propgrid.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30u_ribbon.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxmsw30u_webview.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxregexu.a" />
+					<Add library="$(#wx.lib)/gcc_dll/libwxscintilla.a" />
 					<Add directory="$(#wx.lib)/gcc_dll" />
 				</Linker>
 			</Target>
@@ -145,28 +145,28 @@
 					<Add option="-s" />
 					<Add option="-static-libgcc" />
 					<Add option="-static-libstdc++" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_stc.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_richtext.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_xrc.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_adv.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_html.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxbase30u_xml.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_core.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxbase30u.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxpng.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxjpeg.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxtiff.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxzlib.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxexpat.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_aui.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxbase30u_net.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_gl.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_media.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_propgrid.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_ribbon.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxmsw30u_webview.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxregexu.a" />
-					<Add library="$(#wx.lib)\gcc_lib\libwxscintilla.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30u_stc.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30u_richtext.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30u_xrc.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30u_adv.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30u_html.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxbase30u_xml.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30u_core.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxbase30u.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxpng.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxjpeg.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxtiff.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxzlib.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxexpat.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30u_aui.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxbase30u_net.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30u_gl.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30u_media.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30u_propgrid.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30u_ribbon.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxmsw30u_webview.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxregexu.a" />
+					<Add library="$(#wx.lib)/gcc_lib/libwxscintilla.a" />
 					<Add directory="$(#wx.lib)/gcc_lib" />
 				</Linker>
 				<ExtraCommands>
@@ -191,28 +191,28 @@
 					<Add option="-s" />
 					<Add option="-static-libgcc" />
 					<Add option="-static-libstdc++" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_stc.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_richtext.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_xrc.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_adv.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_html.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxbase30u_xml.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_core.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxbase30u.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxpng.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxjpeg.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxtiff.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxzlib.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxexpat.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_aui.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxbase30u_net.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_gl.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_media.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_propgrid.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_ribbon.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxmsw30u_webview.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxregexu.a" />
-					<Add library="$(#wx.lib)\gcc_lib_x64\libwxscintilla.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxmsw30u_stc.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxmsw30u_richtext.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxmsw30u_xrc.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxmsw30u_adv.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxmsw30u_html.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxbase30u_xml.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxmsw30u_core.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxbase30u.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxpng.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxjpeg.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxtiff.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxzlib.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxexpat.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxmsw30u_aui.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxbase30u_net.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxmsw30u_gl.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxmsw30u_media.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxmsw30u_propgrid.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxmsw30u_ribbon.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxmsw30u_webview.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxregexu.a" />
+					<Add library="$(#wx.lib)/gcc_lib_x64/libwxscintilla.a" />
 					<Add directory="$(#wx.lib)/gcc_lib" />
 				</Linker>
 				<ExtraCommands>
@@ -221,6 +221,7 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-std=gnu++11" />
 			<Add option="-Wall" />
 			<Add option="-pipe" />
 			<Add option="-mthreads" />
